--- a/src/main.css
+++ b/src/main.css
@@ -39,3 +39,18 @@ div {
   margin-left: auto;
   margin-right: auto;
 }
+
+.tooltip {	
+  position: absolute;			
+  text-align: center;			
+  width: 160px;					
+  height: 100px;					
+  padding: 2px;				
+  font: 12px sans-serif;		
+  background: pink;	
+  border: 0px;		
+  border-radius: 8px;			
+  pointer-events: none;	
+  border: solid;
+  border-width: 2px;
+}
