--- a/src/main.css
+++ b/src/main.css
@@ -14,9 +14,9 @@ body {
   display: block;
 }
 
-* {
+/* * {
   border: thin solid black;
-}
+} */
 
 head {
   display: none;
@@ -31,26 +31,41 @@ head {
 }
 
 div {
-  display: block;
+  display: inline-block;
+  position: relative;
 }
 
 .main-container {
-  max-width: 940px;
+  max-width: 1040px;
+  /* display: block; */
+  display: flex;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 8%;
 }
 
+svg {
+  position: relative;
+
+}
 .tooltip {	
   position: absolute;			
-  text-align: center;			
-  width: 160px;					
-  height: 100px;					
-  padding: 2px;				
-  font: 12px sans-serif;		
-  background: pink;	
-  border: 0px;		
+  /* text-align: center;			 */
+  width: 100%;					
+  height: 400px;					
+  padding: 10px;				
+  /* font: 12px sans-serif;		 */
+  background: white;	
+  /* border: 0px;		 */
   border-radius: 8px;			
   pointer-events: none;	
   border: solid;
   border-width: 2px;
+  transform: translate(0, 150%);
+}
+
+.map {
+  display: block;
+  margin-left: auto;
+  /* margin-right: auto  */
 }
