--- a/src/main.css
+++ b/src/main.css
@@ -48,15 +48,20 @@ svg {
   position: relative;
 
 }
+
+.base-map {
+  fill: #b8b8b8;
+  stroke: grey;
+  opacity: 0.3;
+}
+
+
 .tooltip {	
   position: absolute;			
-  /* text-align: center;			 */
   width: 100%;					
   height: 400px;					
-  padding: 10px;				
-  /* font: 12px sans-serif;		 */
+  padding: 17px;				
   background: white;	
-  /* border: 0px;		 */
   border-radius: 8px;			
   pointer-events: none;	
   border: solid;
@@ -68,4 +73,31 @@ svg {
   display: block;
   margin-left: auto;
   /* margin-right: auto  */
+}
+
+.datapoint {
+  stroke: #5e5e5e;
+  stroke-width: 1px;
+  fill-opacity: 0.8;
+}
+
+.legend {
+  stroke: black;
+  fill: none;
+}
+
+#legend-rect {
+  width: 40px;
+  height: 15px;
+}
+
+#legend-text {
+  font-size: 11px;
+  text-anchor: middle;
+}
+
+.school-type {
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 250px;
 }
