--- a/src/main.css
+++ b/src/main.css
@@ -14,9 +14,9 @@ body {
   display: block;
 }
 
-/* * {
+* {
   border: thin solid black;
-} */
+}
 
 head {
   display: none;
@@ -67,6 +67,16 @@ svg {
   border: solid;
   border-width: 2px;
   transform: translate(0, 150%);
+}
+
+.tooltip2 {
+  position: absolute;
+  top: 80px;
+  right: 0;
+  width: 200px;
+  height: 100px;
+  border: 3px solid #73AD21;
+
 }
 
 .map {
