--- a/src/main.css
+++ b/src/main.css
@@ -14,9 +14,9 @@ body {
   display: block;
 }
 
-* {
+/* * {
   border: thin solid black;
-}
+} */
 
 head {
   display: none;
@@ -65,11 +65,11 @@ svg {
   width: 100%;					
   height: 200px;					
   padding: 17px;				
-  background: white;	
-  border-radius: 8px;			
+  background: #F8F9FA;	
+  /* border-radius: 8px;			 */
   pointer-events: none;	
-  border: solid;
-  border-width: 2px;
+  /* border: solid; */
+  /* border-width: 2px; */
   transform: translate(0, 10%);
 }
 
@@ -127,4 +127,5 @@ svg {
   flex-direction: column;
   flex-wrap: wrap;
   width: 250px;
+  padding-top: 300px;
 }
