--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,10 @@ a {
   cursor: pointer;
 }
 
+p {
+  font-size: 20px;
+}
+
 html,
 body {
   background: #F8F9FA;
@@ -41,7 +45,7 @@ div {
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 8%;
+  margin-top: 3%;
 }
 
 svg {
@@ -63,7 +67,7 @@ svg {
 .tooltip {	
   position: absolute;			
   width: 100%;					
-  height: 200px;					
+  height: 300px;					
   padding: 17px;				
   background: #F8F9FA;	
   /* border-radius: 8px;			 */
