--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,15 @@ a {
   cursor: pointer;
 }
 
+a:link {
+  text-decoration: none;
+  color: #4575B4;
+}
+
+a:visited {
+  color: #4575B4;
+}
+
 p {
   font-size: 20px;
 }
@@ -31,6 +40,10 @@ div {
   position: relative;
 }
 
+svg {
+  position: relative;
+}
+
 .container-fluid {
   padding-right: 5%;
   padding-left: 5%;
@@ -45,10 +58,6 @@ div {
   margin-left: auto;
   margin-right: auto;
   margin-top: 3%;
-}
-
-svg {
-  position: relative;
 }
 
 .base-map {
